# hajimi-claw

./: .gitignore  Cargo.toml  README.md  config.example.toml  package.json
.claude/: settings.local.json
.github/workflows/: npm-release.yml
crates/hajimi-claw-agent/: Cargo.toml
crates/hajimi-claw-agent/src/: lib.rs
crates/hajimi-claw-bot/: Cargo.toml
crates/hajimi-claw-bot/src/: lib.rs
crates/hajimi-claw-daemon/: Cargo.toml
crates/hajimi-claw-daemon/src/: lib.rs
crates/hajimi-claw-exec/: Cargo.toml
crates/hajimi-claw-exec/src/: lib.rs
crates/hajimi-claw-gateway/: Cargo.toml
crates/hajimi-claw-gateway/src/: lib.rs
crates/hajimi-claw-llm/: Cargo.toml
crates/hajimi-claw-llm/src/: lib.rs
crates/hajimi-claw-policy/: Cargo.toml
crates/hajimi-claw-policy/src/: lib.rs
crates/hajimi-claw-store/: Cargo.toml
crates/hajimi-claw-store/src/: lib.rs
crates/hajimi-claw-tools/: Cargo.toml
crates/hajimi-claw-tools/src/: lib.rs  mcp.rs
crates/hajimi-claw-types/: Cargo.toml
crates/hajimi-claw-types/src/: lib.rs
packaging/systemd/: hajimi-claw.service
scripts/: install.ps1  install.sh  npm-install.js  stage-prebuilt.js  sync-npm-versions.js
src/: main.rs
