[package]
name = "hajimi-claw-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hajimi-claw-gateway = { path = "../hajimi-claw-gateway" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
hajimi-claw-store = { path = "../hajimi-claw-store" }
hajimi-claw-types = { path = "../hajimi-claw-types" }
