[package]
name = "hajimi-claw-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
hajimi-claw-agent = { path = "../hajimi-claw-agent" }
hajimi-claw-bot = { path = "../hajimi-claw-bot" }
hajimi-claw-exec = { path = "../hajimi-claw-exec" }
hajimi-claw-gateway = { path = "../hajimi-claw-gateway" }
hajimi-claw-llm = { path = "../hajimi-claw-llm" }
hajimi-claw-policy = { path = "../hajimi-claw-policy" }
hajimi-claw-store = { path = "../hajimi-claw-store" }
hajimi-claw-tools = { path = "../hajimi-claw-tools" }
hajimi-claw-types = { path = "../hajimi-claw-types" }

[dev-dependencies]
tempfile.workspace = true
