[package]
name = "hajimi-claw-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hajimi-claw-policy = { path = "../hajimi-claw-policy" }
hajimi-claw-types = { path = "../hajimi-claw-types" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
