[package]
name = "hajimi-claw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
async-trait.workspace = true
hajimi-claw-agent = { path = "../hajimi-claw-agent" }
hajimi-claw-llm = { path = "../hajimi-claw-llm" }
hajimi-claw-policy = { path = "../hajimi-claw-policy" }
hajimi-claw-store = { path = "../hajimi-claw-store" }
hajimi-claw-types = { path = "../hajimi-claw-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
hajimi-claw-exec = { path = "../hajimi-claw-exec" }
hajimi-claw-store = { path = "../hajimi-claw-store" }
hajimi-claw-tools = { path = "../hajimi-claw-tools" }
tempfile.workspace = true
