[package]
name = "hajimi-claw-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
hajimi-claw-types = { path = "../hajimi-claw-types" }
regex.workspace = true
serde.workspace = true
uuid.workspace = true

