[package]
name = "hajimi-claw-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hajimi-claw-types = { path = "../hajimi-claw-types" }
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true

