[package]
name = "hajimi-claw-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hajimi-claw-types = { path = "../hajimi-claw-types" }
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
